force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Solution_Fields__c.field-meta.xml
<CustomField>
    <fullName>APTS_Solution_Fields__c</fullName>
    <inlineHelpText>Select one or more solutions</inlineHelpText>
    <label>Solution Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETAS-E2E</fullName>
            </value>
            <value>
                <fullName>ETAS-ECM/PG</fullName>
            </value>
            <value>
                <fullName>ETAS-SID/PG</fullName>
            </value>
            <value>
                <fullName>ETAS-ICA/PG</fullName>
            </value>
            <value>
                <fullName>ETAS-DAP</fullName>
                <isActive>false</isActive>
                <label>ETAS-DAP</label>
            </value>
            <value>
                <fullName>ETAS-DEV</fullName>
                <isActive>false</isActive>
                <label>ETAS-DEV</label>
            </value>
            <value>
                <fullName>ETAS-MSS</fullName>
                <isActive>false</isActive>
                <label>ETAS-MSS</label>
            </value>
            <value>
                <fullName>ETAS-SEC</fullName>
                <isActive>false</isActive>
                <label>ETAS-SEC</label>
            </value>
            <value>
                <fullName>ETAS-VCS</fullName>
                <isActive>false</isActive>
                <label>ETAS-VCS</label>
            </value>
            <value>
                <fullName>ETAS-VOS</fullName>
                <isActive>false</isActive>
                <label>ETAS-VOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>