force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Special_customer_requests__c.field-meta.xml
<CustomField>
    <fullName>APTS_Special_customer_requests__c</fullName>
    <description>Special customer requests from the purchasing process implemented</description>
    <inlineHelpText>Special customer requests from the purchasing process implemented</inlineHelpText>
    <label>Special customer requests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>