force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Tax_Clause_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>APTS_Tax_Clause_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Clause Reviewed</label>
    <type>Checkbox</type>
</CustomField>