force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>APTS_Term_Years__c</fullName>
    <defaultValue>&quot;One&quot;</defaultValue>
    <description>Created for CLM based accelerator</description>
    <inlineHelpText>The duration of the agreement from the start date - in years</inlineHelpText>
    <label>Term (Years)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>