force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_TIA_Comments__c.field-meta.xml
<CustomField>
    <fullName>APTS_TIA_Comments__c</fullName>
    <label>Transfer Impact Assesment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>