force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_TOM_Checklist_Link__c.field-meta.xml
<CustomField>
    <fullName>APTS_TOM_Checklist_Link__c</fullName>
    <description>Technical Obligation Management Link</description>
    <label>TOM Checklist Link</label>
    <type>TextArea</type>
</CustomField>