force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_TOM_last_review_date__c.field-meta.xml
<CustomField>
    <fullName>APTS_TOM_last_review_date__c</fullName>
    <inlineHelpText>Technical Obligation Management</inlineHelpText>
    <label>TOM last review date</label>
    <type>Date</type>
</CustomField>