force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_TOM_review_comment__c.field-meta.xml
<CustomField>
    <fullName>APTS_TOM_review_comment__c</fullName>
    <inlineHelpText>Technical Obligation Management Comments</inlineHelpText>
    <label>TOM review comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>