force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Transfer_Impact_Assessment__c.field-meta.xml
<CustomField>
    <fullName>APTS_Transfer_Impact_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Impact Assessment</label>
    <type>Checkbox</type>
</CustomField>