force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Type_of_Paper__c.field-meta.xml
<CustomField>
    <fullName>APTS_Type_of_Paper__c</fullName>
    <description>Created for CLM based accelerator</description>
    <inlineHelpText>To identify the type of paper used in the agreement</inlineHelpText>
    <label>ETAS Standard Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own Paper</fullName>
                <default>true</default>
                <label>ETAS Standard Template</label>
            </value>
            <value>
                <fullName>Third Party Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>