force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Type_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>APTS_Type_of_Signature__c</fullName>
    <label>Type of Company Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wet Ink Signature</fullName>
            </value>
            <value>
                <fullName>eSignature</fullName>
                <default>true</default>
                <label>eSignature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>