force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Account_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Account_Search_Field__c</fullName>
    <description>This field is used in the side bar search</description>
    <externalId>true</externalId>
    <label>Account Search Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>