force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement_Number__c</fullName>
    <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
    <inlineHelpText>ID (Legacy)</inlineHelpText>
    <label>Agreement Number_Num (INTERNAL)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>