force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__AllowableOutputFormats__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AllowableOutputFormats__c</fullName>
    <description>The list of output formats allowed for the agreement.</description>
    <inlineHelpText>The list of output formats allowed for the agreement.</inlineHelpText>
    <label>Allowable Output Formats</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>