force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Amendment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Amendment_Effective_Date__c</fullName>
    <description>The date this amendment is effective</description>
    <label>Amendment Effective Date</label>
    <type>Date</type>
</CustomField>