force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Contract_Start_Date__c</fullName>
    <description>The effective date of the agreement</description>
    <inlineHelpText>The effective date of the agreement</inlineHelpText>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>