force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>Detailed description of this agreement</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>