force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Cancel_Request__c</fullName>
    <description>Cancel the agreement request</description>
    <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;))), IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;, $User.UIThemeDisplayed == &#39;Theme4u&#39;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cancel the agreement request</inlineHelpText>
    <label>Cancel Request</label>
    <type>Text</type>
</CustomField>