force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Execute__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Execute__c</fullName>
    <description>Activates the agreement</description>
    <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;), HYPERLINK(&quot;/apex/Apttus__ActivateAgreement?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Activates the agreement</inlineHelpText>
    <label>Activate</label>
    <type>Text</type>
</CustomField>