force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Regenerate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Regenerate_Agreement__c</fullName>
    <description>Conditionally show the &quot;Regenerate&quot; custom button</description>
    <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;, $User.UIThemeDisplayed == &#39;Theme4u&#39;), HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Regenerate the agreement</inlineHelpText>
    <label>Regenerate</label>
    <type>Text</type>
</CustomField>