force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Send_To_Other_Party_For_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Send_To_Other_Party_For_Signatures__c</fullName>
    <description>Send the agreement for signatures</description>
    <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))),IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;, $User.UIThemeDisplayed == &#39;Theme4u&#39;), HYPERLINK(&quot;/apex/Apttus__LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send the agreement for signatures</inlineHelpText>
    <label>Send For Signatures</label>
    <type>Text</type>
</CustomField>