force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_View_Draft_Contract__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_View_Draft_Contract__c</fullName>
    <description>Conditionally show the &quot;Preview&quot; custom button if the contract status is Request</description>
    <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &#39;Theme4d&#39;, $User.UIThemeDisplayed == &#39;Theme4t&#39;, $User.UIThemeDisplayed == &#39;Theme4u&#39;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview the agreement</inlineHelpText>
    <label>Preview</label>
    <type>Text</type>
</CustomField>